--- a/pom.xml
+++ b/pom.xml
@@ -62,5 +62,10 @@
             <artifactId>joda-time</artifactId>
             <version>1.6.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>r09</version>
+        </dependency>
     </dependencies>
 </project>
